--- a/x402-video-paywall/package.json
+++ b/x402-video-paywall/package.json
@@ -20,8 +20,11 @@
   "description": "A demo application showing how to implement a video paywall using the x402 payment protocol",
   "dependencies": {
     "@coinbase/x402": "^0.3.2",
+    "@netlify/functions": "^4.1.5",
+    "@types/express": "^5.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "serverless-http": "^3.2.0",
     "viem": "^2.29.0",
     "x402-express": "^0.3.2",
     "x402-fetch": "^0.3.1"
